updated the remaining sections of the about me document

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a Senior Data Integration Engineering Consultant ready to expand my tech skills to front-end/full stack development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm originally from Albany, GA.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are singing, binge-watching Hulu and Netflix or traveling to the Carribbean.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is watching Visualytics.io change how companies visualize and interact with their data.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Lawrenceville, GA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I'm tired of pausing the implementation of my platform because of dependence on other developers.  I want to build Visualytics.io to where I want it to be as well as implement other platform ideas for my clients.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/unicornvirgo">Github</a></li>
         </ul>
     </footer>
 </body>
